--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,7 +27,7 @@ legend {
 }
 
 .bg-primary {
-    @apply bg-lime-700;
+    @apply bg-lime-700 text-white;
 }
 
 .bg-secondary {
@@ -62,6 +62,20 @@ legend {
 .select:focus .option {
   position: relative;
   pointer-events: all;
+}
+
+@layer components{
+  .mainshadow {
+    @apply shadow-[5px_5px_8px_0px_rgba(0,0,0,0.2)];
+  }
+}
+
+.fields {
+  @apply text-gray-700 rounded-lg dark:bg-gray-600 dark:text-gray-50 w-full placeholder:text-green-700 placeholder:opacity-50 dark:placeholder:text-lime-500 transform duration-300 focus:ring-lime-500 focus:ring-2 focus:border-none focus:outline-none hover:mainshadow disabled:text-gray-400 disabled:dark:text-gray-500 disabled:dark:bg-gray-800/50 disabled:bg-stone-300 disabled:hover:shadow-none;
+}
+
+.forms {
+  @apply bg-zinc-300 text-gray-600 dark:text-gray-400 dark:bg-gray-700 px-8 pt-8 pb-10 w-11/12 sm:w-8/12 md:w-6/12 lg:w-5/12 2xl:w-3/12 rounded-xl flex flex-col gap-2 transform duration-300 mainshadow accent-lime-600;
 }
 
 /* ----
@@ -143,25 +157,26 @@ form {
     @apply flex flex-col gap-4 w-3/12;
 }
 select {
-  @apply form-input bg-transparent border-0 border-b-2 px-2 focus:border-b-lime-500 smooth text-lime-500 w-full pb-1 !ring-0 !outline-none placeholder:text-stone-600 border-b-stone-600;
+  @apply fields;
 }
+
 input[type="text"] {
-    @apply form-input bg-transparent border-0 border-b-2 px-2 focus:border-b-lime-500 smooth text-lime-500 w-full pb-1 !ring-0 !outline-none placeholder:text-stone-600 border-b-stone-600;
+    @apply fields;
 }
 input[type="date"] {
-  @apply form-input bg-transparent border-0 border-b-2 px-2 focus:border-b-lime-500 smooth text-lime-500 w-full pb-1 !ring-0 !outline-none placeholder:text-stone-600 border-b-stone-600;
+  @apply fields;
 }
 input[type="number"] {
-  @apply form-input bg-transparent border-0 border-b-2 px-2 focus:border-b-lime-500 smooth text-lime-500 w-full pb-1 !ring-0 !outline-none placeholder:text-stone-600 border-b-stone-600;
+  @apply fields;
 }
 input[type="password"] {
-  @apply form-input bg-transparent border-0 border-b-2 px-2 focus:border-b-lime-500 smooth text-lime-500 w-full pb-1 !ring-0 !outline-none placeholder:text-stone-600 border-b-stone-600;
+  @apply fields;
 }
 input[type="email"] {
-  @apply form-input bg-transparent border-0 border-b-2 px-2 focus:border-b-lime-500 smooth text-lime-500 w-full pb-1 !ring-0 !outline-none placeholder:text-stone-600 border-b-stone-600;
+  @apply fields;
 }
 input[type="tel"] {
-  @apply form-input bg-transparent border-0 border-b-2 px-2 focus:border-b-lime-500 smooth text-lime-500 w-full pb-1 !ring-0 !outline-none placeholder:text-stone-600 border-b-stone-600;
+  @apply fields;
 }
 
 input[name="role"]{
