--- a/public/css/app.css
+++ b/public/css/app.css
@@ -759,11 +759,35 @@ select {
 .left-0 {
   left: 0px;
 }
-.bottom-1\.5 {
-  bottom: 0.375rem;
+.top-5 {
+  top: 1.25rem;
 }
-.bottom-1 {
-  bottom: 0.25rem;
+.-top-5 {
+  top: -1.25rem;
+}
+.-top-10 {
+  top: -2.5rem;
+}
+.right-1 {
+  right: 0.25rem;
+}
+.top-1 {
+  top: 0.25rem;
+}
+.top-1\/2 {
+  top: 50%;
+}
+.bottom-1\/2 {
+  bottom: 50%;
+}
+.right-2 {
+  right: 0.5rem;
+}
+.-bottom-1\/2 {
+  bottom: -50%;
+}
+.top-1\/4 {
+  top: 25%;
 }
 .z-10 {
   z-index: 10;
@@ -843,14 +867,8 @@ select {
 .mt-6 {
   margin-top: 1.5rem;
 }
-.mt-16 {
-  margin-top: 4rem;
-}
 .mb-4 {
   margin-bottom: 1rem;
-}
-.ml-5 {
-  margin-left: 1.25rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
@@ -900,6 +918,12 @@ select {
 .h-screen {
   height: 100vh;
 }
+.h-32 {
+  height: 8rem;
+}
+.h-auto {
+  height: auto;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -931,9 +955,6 @@ select {
 .w-screen {
   width: 100vw;
 }
-.w-1 {
-  width: 0.25rem;
-}
 .w-64 {
   width: 16rem;
 }
@@ -951,6 +972,15 @@ select {
 }
 .w-1\/12 {
   width: 8.333333%;
+}
+.w-1 {
+  width: 0.25rem;
+}
+.w-32 {
+  width: 8rem;
+}
+.w-6\/12 {
+  width: 50%;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -981,6 +1011,9 @@ select {
 .cursor-default {
   cursor: default;
 }
+.cursor-pointer {
+  cursor: pointer;
+}
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -988,6 +1021,9 @@ select {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1089,6 +1125,9 @@ select {
 .border-0 {
   border-width: 0px;
 }
+.border-4 {
+  border-width: 4px;
+}
 .border-t {
   border-top-width: 1px;
 }
@@ -1102,9 +1141,9 @@ select {
 .border-current {
   border-color: currentColor;
 }
-.border-stone-700 {
+.border-gray-700 {
   --tw-border-opacity: 1;
-  border-color: rgb(68 64 60 / var(--tw-border-opacity));
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
@@ -1116,6 +1155,10 @@ select {
 .border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
+}
+.border-lime-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(101 163 13 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1137,9 +1180,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-stone-700 {
+.bg-gray-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(68 64 60 / var(--tw-bg-opacity));
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 .bg-gray-900 {
   --tw-bg-opacity: 1;
@@ -1167,12 +1210,31 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
+.bg-white\/50 {
+  background-color: rgb(255 255 255 / 0.5);
+}
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+.from-transparent {
+  --tw-gradient-from: transparent;
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 .p-6 {
   padding: 1.5rem;
@@ -1249,6 +1311,9 @@ select {
 .pt-10 {
   padding-top: 2.5rem;
 }
+.pb-20 {
+  padding-bottom: 5rem;
+}
 .pl-8 {
   padding-left: 2rem;
 }
@@ -1307,6 +1372,9 @@ select {
 .font-extrabold {
   font-weight: 800;
 }
+.font-normal {
+  font-weight: 400;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -1321,6 +1389,21 @@ select {
 }
 .leading-normal {
   line-height: 1.5;
+}
+.leading-tight {
+  line-height: 1.25;
+}
+.leading-snug {
+  line-height: 1.375;
+}
+.leading-3 {
+  line-height: .75rem;
+}
+.leading-4 {
+  line-height: 1rem;
+}
+.leading-6 {
+  line-height: 1.5rem;
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -1374,22 +1457,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(190 242 100 / var(--tw-text-opacity));
 }
-.text-stone-200 {
-  --tw-text-opacity: 1;
-  color: rgb(231 229 228 / var(--tw-text-opacity));
-}
-.text-stone-300 {
-  --tw-text-opacity: 1;
-  color: rgb(214 211 209 / var(--tw-text-opacity));
-}
-.text-stone-400 {
-  --tw-text-opacity: 1;
-  color: rgb(168 162 158 / var(--tw-text-opacity));
-}
-.text-stone-100 {
-  --tw-text-opacity: 1;
-  color: rgb(245 245 244 / var(--tw-text-opacity));
-}
 .text-lime-500 {
   --tw-text-opacity: 1;
   color: rgb(132 204 22 / var(--tw-text-opacity));
@@ -1402,6 +1469,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(251 113 133 / var(--tw-text-opacity));
 }
+.text-stone-100 {
+  --tw-text-opacity: 1;
+  color: rgb(245 245 244 / var(--tw-text-opacity));
+}
 .text-lime-400 {
   --tw-text-opacity: 1;
   color: rgb(163 230 53 / var(--tw-text-opacity));
@@ -1413,19 +1484,31 @@ select {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.placeholder-stone-500::-moz-placeholder {
+.placeholder-gray-500::-moz-placeholder {
   --tw-placeholder-opacity: 1;
-  color: rgb(120 113 108 / var(--tw-placeholder-opacity));
+  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
 }
-.placeholder-stone-500::placeholder {
+.placeholder-gray-500::placeholder {
   --tw-placeholder-opacity: 1;
-  color: rgb(120 113 108 / var(--tw-placeholder-opacity));
+  color: rgb(107 114 128 / var(--tw-placeholder-opacity));
 }
 .opacity-100 {
   opacity: 1;
 }
 .opacity-0 {
   opacity: 0;
+}
+.opacity-5 {
+  opacity: 0.05;
+}
+.opacity-30 {
+  opacity: 0.3;
+}
+.opacity-20 {
+  opacity: 0.2;
+}
+.bg-blend-luminosity {
+  background-blend-mode: luminosity;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -1518,6 +1601,18 @@ legend {
   padding-right: 0.5rem;
   text-align: center;
   font-weight: 700;
+}
+
+.lagani-theme {
+  --fa-secondary-opacity: 1.0;
+  --fa-primary-color: #7CB342;
+  --fa-secondary-color: rgb(185, 185, 185);
+}
+
+.dashboard_stats {
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(101 163 13 / var(--tw-text-opacity));
 }
 
 .titlebar {
@@ -2673,6 +2768,14 @@ input[type=number] {
     Animations - end
   ---- */
 
+.marker\:mt-2 *::marker {
+  margin-top: 0.5rem;
+}
+
+.marker\:mt-2::marker {
+  margin-top: 0.5rem;
+}
+
 .placeholder\:text-gray-300::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
@@ -2703,9 +2806,9 @@ input[type=number] {
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
-.hover\:bg-stone-800:hover {
+.hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(41 37 36 / var(--tw-bg-opacity));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-lime-700:hover {
@@ -2722,11 +2825,6 @@ input[type=number] {
   font-weight: 700;
 }
 
-.hover\:text-stone-200:hover {
-  --tw-text-opacity: 1;
-  color: rgb(231 229 228 / var(--tw-text-opacity));
-}
-
 .hover\:text-gray-200:hover {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -2740,6 +2838,11 @@ input[type=number] {
 .hover\:text-rose-600:hover {
   --tw-text-opacity: 1;
   color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.hover\:text-stone-200:hover {
+  --tw-text-opacity: 1;
+  color: rgb(231 229 228 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-500:hover {
@@ -2770,14 +2873,14 @@ input[type=number] {
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
 
-.focus\:placeholder-stone-600:focus::-moz-placeholder {
+.focus\:placeholder-gray-600:focus::-moz-placeholder {
   --tw-placeholder-opacity: 1;
-  color: rgb(87 83 78 / var(--tw-placeholder-opacity));
+  color: rgb(75 85 99 / var(--tw-placeholder-opacity));
 }
 
-.focus\:placeholder-stone-600:focus::placeholder {
+.focus\:placeholder-gray-600:focus::placeholder {
   --tw-placeholder-opacity: 1;
-  color: rgb(87 83 78 / var(--tw-placeholder-opacity));
+  color: rgb(75 85 99 / var(--tw-placeholder-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -2958,12 +3061,20 @@ input[type=number] {
     display: flex;
   }
 
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:hidden {
     display: none;
   }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:border-t-0 {
@@ -2999,6 +3110,10 @@ input[type=number] {
 
   .lg\:w-4\/12 {
     width: 33.333333%;
+  }
+
+  .lg\:w-6\/12 {
+    width: 50%;
   }
 
   .lg\:px-8 {
